[fix] Fixed z-index of preview overlay
The z-index is increased so it's higher than the main navigation menu.
This avoids the possibility of triggering the main menu inadvertently.

--- a/openwisp_controller/config/static/config/css/admin.css
+++ b/openwisp_controller/config/static/config/css/admin.css
@@ -40,7 +40,7 @@ input.readonly{
     position: fixed;
     left: 0;
     top: 0;
-    z-index: 11;
+    z-index: 10000;
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.91);
